# SMIT_API

./: README.md
api/: .env.example
api/backend/: pyproject.toml
api/backend/app/: config.py
api/backend/app/core/: crud.py  dependencies.py
